--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 certifi==2025.7.14
-cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
@@ -17,7 +16,7 @@ h11==0.16.0
 idna==3.10
 mangum==0.19.0
 passlib==1.7.4
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
