--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
+# DATABASE_URL=postgresql://fixbuddy_user:gI35lArWaw1tv32BBifMut03fpLz8QhM@dpg-d2291le3jp1c738kno80-a.oregon-postgres.render.com/fixbuddy_db
 DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
 SECRET_KEY=td1v4kG1UGqF8sJwhuYdXblxbhmR5R7oWaY6-bOdEnw
 ALGORITHM=HS256
