--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 certifi==2025.7.14
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
@@ -24,6 +25,7 @@ pydantic_core==2.33.2
 python-dotenv==1.1.0
 python-jose==3.5.0
 python-multipart==0.0.20
+razorpay==1.4.2
 requests==2.32.3
 rsa==4.9.1
 six==1.17.0
