Update backend code, remove vercel.json, ignore env/uploads/venv

--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,8 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 ; sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql+psycopg2://servex_user:servex_pass@localhost:5432/servex_db
+sqlalchemy.url = postgresql+psycopg2://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
+#postgresql+psycopg2://servex_user:servex_pass@localhost:5432/servex_db
 
 
 
