--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # DATABASE_URL=postgresql://fixbuddy_user:gI35lArWaw1tv32BBifMut03fpLz8QhM@dpg-d2291le3jp1c738kno80-a.oregon-postgres.render.com/fixbuddy_db
 DATABASE_URL=postgresql://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
-#postgresql://servex_user:servex_pass@localhost:5432/servex_db
+# DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
 SECRET_KEY=td1v4kG1UGqF8sJwhuYdXblxbhmR5R7oWaY6-bOdEnw
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
