partially update booking and payment routes crud schema  from mac

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ EMAIL_PASSWORD=ubmxigjdthnjnmhr
 
 RAZORPAY_KEY_ID=rzp_test_R7WIphvGyguUaE
 RAZORPAY_KEY_SECRET=IoWaCYNJUO1UZYKRPLmCJ1De
+UPLOAD_DIR=static/uploads
