--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-# DATABASE_URL=postgresql://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
-DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
+DATABASE_URL=postgresql://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
+# DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
 SECRET_KEY=td1v4kG1UGqF8sJwhuYdXblxbhmR5R7oWaY6-bOdEnw
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
