update emails credentials

--- a/.env
+++ b/.env
@@ -5,8 +5,18 @@ SECRET_KEY=td1v4kG1UGqF8sJwhuYdXblxbhmR5R7oWaY6-bOdEnw
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-EMAIL_USERNAME=admasav247@gmail.com
-EMAIL_PASSWORD=ubmxigjdthnjnmhr
+# EMAIL_USERNAME=admasav247@gmail.com
+# EMAIL_PASSWORD=ubmxigjdthnjnmhr
+
+EMAIL_USERNAME=info@serwex.in
+EMAIL_PASSWORD=Info@Serwex.in1
+
+SMTP_HOST=smtp.hostinger.com
+# SMTP_PORT=465
+# SMTP_USER=info@serwex.in
+# SMTP_PASS=Info@Serwex.in1
+# SMTP_TO=info@serwex.in
+
 
 
 
