update emails credentials

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ EMAIL_USERNAME=info@serwex.in
 EMAIL_PASSWORD=Info@Serwex.in1
 
 SMTP_HOST=smtp.hostinger.com
-# SMTP_PORT=465
+SMTP_PORT=465
 # SMTP_USER=info@serwex.in
 # SMTP_PASS=Info@Serwex.in1
 # SMTP_TO=info@serwex.in
