--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-DATABASE_URL=postgresql://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
-# DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
+# DATABASE_URL=postgresql://serwexuser:SerwexAdmin131@localhost:5432/serwexdb
+DATABASE_URL=postgresql://servex_user:servex_pass@localhost:5432/servex_db
 SECRET_KEY=td1v4kG1UGqF8sJwhuYdXblxbhmR5R7oWaY6-bOdEnw
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
@@ -13,9 +13,9 @@ EMAIL_PASSWORD=Info@Serwex.in1
 
 SMTP_HOST=smtp.hostinger.com
 SMTP_PORT=465
-# SMTP_USER=info@serwex.in
-# SMTP_PASS=Info@Serwex.in1
-# SMTP_TO=info@serwex.in
+SMTP_USER=info@serwex.in
+SMTP_PASS=Info@Serwex.in1
+SMTP_SSL=true
 
 
 
